# ensemble-cgan

./: .gitignore  pyproject.toml
dsrnngan/: data.py  data_generator.py  data_paths-example.yaml  data_paths.-example.yaml  data_paths.yaml  evaluation.py  forecast.yaml  fss.py  gan.py  main.py  models.py  plots.py  predict.py  roc.py  run_benchmarks.py  run_eval.py  setupdata.py  setupmodel.py  test_forecast.ipynb  test_forecast.py  tfrecords_generator.py
