[tool.poetry]
name = "downscaling-cgan"
version = "0.1.0"
description = "post-process rainfall forecasts using cGAN"
authors = ["Jason Kinyua <jaysnmury@gmail.com>"]
readme = "README.md"
packages = [{include = "dsrnngan"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seaborn = "^0.13.1"
Cartopy = "^0.22.0"
jupyter = "^1.0.0"
xarray = "^2024.1.0"
matplotlib = "^3.8.2"
numba = "^0.58.1"
pandas = "^2.2.0"
netcdf4 = "^1.6.5"
h5netcdf = "^1.3.0"
scikit-learn = "^1.4.0"
cfgrib = "^0.9.10.4"
dask = "^2024.1.0"
tqdm = "^4.66.1"
properscoring = "^0.1"
climlab = "^0.8.2"
tensorflow = "2.15"
eccodes = "^1.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
